# locate_anything_setup

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  setup.sh  uninstall.sh
container/: entrypoint.sh
docs/: ARCHITECTURE.md  CLIENT_PROTOCOL.md  DRONE_DETECTION.md  MODEL_CAPABILITIES.md  OPERATIONS.md  PINNED_VERSIONS.md  PIXEL_TO_TOKEN_MATH.md  SECURITY.md
examples/: .gitignore  README.md  reference_client.py
rust_server/: .gitignore  Cargo.toml
rust_server/src/: config.rs  error.rs  ipc.rs  jpeg.rs  main.rs  prompt_validator.rs  protocol.rs  state.rs  ws.rs
scripts/: 00_validate_host.sh  01_download_weights.sh  02_build_image.sh  03_start_service.sh  04_smoke_test.sh  05_concurrency_smoke.sh
scripts/lib/: .gitignore  common.sh  concurrency_smoke_client.py  smoke_ws_client.py  versions.sh
website/: issues.html  plan.html
worker/: .gitignore  __init__.py  calibration.py  inference.py  la_worker.py  parsing.py  pixel_token_math.py  prompts.py  test_parsing.py  tiling.py  validate_startup.py
