[package]
name        = "la_server"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.95"
description = "HTTP + WebSocket frontend for the LocateAnything-3B Python worker."
license     = "Unlicense"
publish     = false

[[bin]]
name = "la_server"
path = "src/main.rs"

# Pins below match scripts/lib/versions.sh — when bumping, update both files.
[dependencies]
axum               = { version = "=0.8.9",   default-features = false, features = ["http1", "json", "matched-path", "tokio", "tracing", "ws"] }
tokio              = { version = "=1.52.3",  default-features = false, features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal", "fs", "io-util"] }
tokio-util         = { version = "=0.7.18",  default-features = false, features = ["codec"] }
tower              = { version = "=0.5.3",   default-features = false, features = ["util"] }
tower-http         = { version = "=0.6.11",  default-features = false, features = ["trace", "request-id", "limit", "cors", "timeout"] }
futures-util       = { version = "=0.3.31",  default-features = false, features = ["sink", "std"] }
bytes              = "=1.11.1"
serde              = { version = "=1.0.228", features = ["derive"] }
serde_json         = "=1.0.150"
tracing            = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }
clap               = { version = "=4.6.1",  features = ["derive", "env"] }
jpeg-decoder       = { version = "=0.3.2",  default-features = false }
anyhow             = "=1.0.95"
thiserror          = "=2.0.9"

[profile.release]
codegen-units = 1
lto           = "thin"
panic         = "abort"
strip         = true
opt-level     = 3
